Attempt to fix apple phone overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,8 @@
 
 html, body {
     overflow-x: hidden;
+    position: relative;
+    height: 100%;
 }
 
 main {
